--- a/manifest.json
+++ b/manifest.json
@@ -1,54 +1,21 @@
 {
   "name": "Kaffeemaschine Service",
   "short_name": "Service",
+  "description": "Service-Tracker Profitec Pro 600",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#4caf50",
   "icons": [
     {
-      "src": "https://raw.githubusercontent.com/phipso79/WebApp-Kaffeemaschinen-Service-Tracker/main/icon.png",
+      "src": "https://raw.githubusercontent.com/phipso79/WebApp-Kaffeemaschinen-Service-Tracker/img/Kaffee-icon-512.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://raw.githubusercontent.com/phipso79/WebApp-Kaffeemaschinen-Service-Tracker/main/icon.png",
+      "src": "https://raw.githubusercontent.com/phipso79/WebApp-Kaffeemaschinen-Service-Tracker/main/img/Kaffee-icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ]
 }
-3. Verlinke das Manifest in deiner Google Apps Script HTML-Datei
-In der Datei Index.html (oder deiner Haupt-HTML-Datei):
-
-html
-Kopieren
-Bearbeiten
-<head>
-  ...
-  <link rel="manifest" href="https://raw.githubusercontent.com/phipso79/WebApp-Kaffeemaschinen-Service-Tracker/main/manifest.json">
-</head>
-❌ Warum Google Drive NICHT geeignet ist
-Google Drive kann manifest.json nicht als application/json mit richtiger MIME-Type bereitstellen.
-
-Außerdem ist die URL nicht stabil genug für Progressive Web Apps.
-
-📱 PWA testen & auf Homescreen speichern
-Deploye deine Web App wie gewohnt mit doGet()
-
-Öffne sie auf dem Smartphone (z. B. Chrome Android, Safari iOS)
-
-Teilen > Zum Home-Bildschirm hinzufügen
-
-Die App erscheint mit Icon und Name wie eine native App.
-
-Möchtest du, dass ich das Manifest automatisch aus Apps Script als eigene HTML-Seite bereitstelle (dynamisch generiert)? Dann wäre Variante B mit HtmlService.createTemplateFromFile() möglich – sag einfach Bescheid.
-
-
-
-
-
-
-
-ChatGPT fragen
-
